modifico carpeta multimedia

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
+            <img src="./multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
     </div>
 
     <div class="carousel-item">
-        <img src="/multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
+        <img src="./multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
     </div>
     <div class="carousel-item">
-        <img src="/multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
+        <img src="./multimedia/yerbamate.jpg" class="d-block w-100" alt="mate1">
     </div>
 
     </div>
@@ -75,7 +75,7 @@
         <p class= "fs-4">¡Si crees que estas listo para unirte, te estamos esperando!</p>
     </div>
     <div class="mt-5 text-center">
-        <img class= "img-fluid" src="/multimedia/mateimpe.png" alt="equipo">
+        <img class= "img-fluid" src="./multimedia/mateimpe.png" alt="equipo">
     </div>
 </section>
 
@@ -86,7 +86,7 @@
         <p class= "fs-4">¡Si crees que estas listo para unirte, te estamos esperando!</p>
     </div>
     <div class="mt-5 text-center">
-        <img class= "img-fluid"src="/multimedia/equipo.jpg" alt="equipo">
+        <img class= "img-fluid"src="./multimedia/equipo.jpg" alt="equipo">
     </div>
 </section>
 
@@ -98,7 +98,7 @@
         <p class= "fs-4">¡Si crees que estas listo para unirte, te estamos esperando!</p>
     </div>
     <div class="mt-5 text-center">
-        <img class= "img-fluid" src="/multimedia/san isidro mapa.png" alt="equipo">
+        <img class= "img-fluid" src="./multimedia/san isidro mapa.png isidro mapa.png" alt="equipo">
         <p class="mt-4">Estamos ubicados en el centro de Zona Norte, Buenos Aires. Capital de comercios donde se realizan la mayoria de compra de mates autotocnos con todas las caracteristicas que vos estas buscando!</p>
     </div>
 </section>
